Correct class subfeature support
