# schemas/api.yaml
@@ -400,7 +400,17 @@ components:
           items: { $ref: "#/components/schemas/LegacyPowerDetails" }
         subFeatures:
           type: array
-          items: { $ref: "#/components/schemas/LegacyClassFeatureDetails" }
+          items: { $ref: "#/components/schemas/LegacyClassSubFeatureDetails" }
+    LegacyClassSubFeatureDetails:
+      type: object
+      required:
+        - subFeatureDetails
+        - powers
+      properties:
+        subFeatureDetails: { $ref: "#/components/schemas/LegacyRuleDetails" }
+        powers:
+          type: array
+          items: { $ref: "#/components/schemas/LegacyPowerDetails" }
     LegacyClassDetails:
       type: object
       required:
